[package]
name = "node_master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
instructions = { path = "../../instructions" }
futures = "0.3.28"
regex = "1.9.3"
reqwest = "0.11.18"
tokio = { version = "1.32.0", features = ["full"] }
