[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.19"
tokio = { version = "1.30.0", features = ["full"] }
